--- a/SoteriaAppSln/SoteriaApp/SoteriaApp/Views/LearnerReportsList.xaml
+++ b/SoteriaAppSln/SoteriaApp/SoteriaApp/Views/LearnerReportsList.xaml
@@ -25,6 +25,8 @@
                                     <Grid.RowDefinitions>
                                         <RowDefinition Height="Auto"/>
                                         <RowDefinition Height="Auto"/>
+                                        <RowDefinition Height="Auto"/>
+                                        <RowDefinition Height="Auto"/>
                                     </Grid.RowDefinitions>
 
                                     <Grid.ColumnDefinitions>
