--- a/SoteriaAppSln/SoteriaApp/SoteriaApp/Views/LearnerReportsList.xaml
+++ b/SoteriaAppSln/SoteriaApp/SoteriaApp/Views/LearnerReportsList.xaml
@@ -8,7 +8,7 @@
         <StackLayout>
             <Frame BackgroundColor="#000000" Padding="12" CornerRadius="0">
                 <StackLayout Orientation="Horizontal">
-                    <Image Source="Manga.png" HeightRequest="50" Aspect="AspectFit" HorizontalOptions="Start"/>
+                    
 
                     <Label Padding="10,0,0,0" Text="Class List" HorizontalTextAlignment="Start" TextColor="White" FontSize="16" VerticalOptions="CenterAndExpand"/>
 
@@ -16,7 +16,7 @@
             </Frame>
 
             <StackLayout>
-                <ListView x:Name="ReportsListPage" ItemsSource="{Binding ReportsList}" HasUnevenRows="True" ItemTapped="ReportsListPage_ItemTapped" SelectionMode="None">
+                <ListView x:Name="ReportsListPage" ItemsSource="{Binding ReportsList}" HasUnevenRows="True" SelectionMode="None">
                     <ListView.ItemTemplate>
                         <DataTemplate x:DataType="soteriaapp:LearnerReportsListViewModel">
 
@@ -52,6 +52,13 @@
                 </ListView>
 
             </StackLayout>
+
+            <Button  ImageSource="ReportsIcon"
+                                 CornerRadius="360"
+                                 HorizontalOptions="EndAndExpand"
+                             BackgroundColor="Transparent" Command="{Binding LearnerDetailsBtn}"
+                >
+            </Button>
 
         </StackLayout>
     </ContentPage.Content>
