--- a/SoteriaAppSln/SoteriaApp/SoteriaApp/Views/LearnerDetailsPage.xaml
+++ b/SoteriaAppSln/SoteriaApp/SoteriaApp/Views/LearnerDetailsPage.xaml
@@ -56,15 +56,16 @@
                             <Label Text="Date of Birth" TextColor="Gray" FontSize="18"/>
                             <Entry  Text="{Binding DateOfBirth}" Placeholder="Date of Birth" FontSize="18" FontAttributes="None"/>
                         </StackLayout>
-                        <StackLayout Grid.Row="5" Margin="0,10,0,0" Spacing="10" HeightRequest="90">
-                            <Entry Placeholder="ID Number" FontSize="18" FontAttributes="None"/>
-                            <Label Text="{Binding IdNumber}" TextColor="Black" HorizontalOptions="Center"/>
+                       
+                        <StackLayout Grid.Row="6" Margin="0,0,0,100" Spacing="10" HeightRequest="90">
+                            <Entry Placeholder="CEMIS Number" FontSize="18" FontAttributes="None"/>
+                            <Label Text="{Binding CEMISnumber}" TextColor="Black" HorizontalOptions="Center"/>
                         </StackLayout>
 
 
 
                         <!--Parent Details-->
-                        <StackLayout Grid.Row="6" Margin="0,10,0,0" Spacing="10" HeightRequest="90">
+                        <StackLayout Grid.Row="6" Margin="0,80,0,0" Spacing="10" HeightRequest="90">
                             <Frame  BackgroundColor="Transparent">
                                 <Label Text="Parent Details" FontSize="20" FontAttributes="Bold" HorizontalOptions="Center" HorizontalTextAlignment="Center"/>
                             </Frame>
